# third-party-api-clients

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.txt  api.github.com.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml
docusign/: Cargo.toml  README.md
docusign/src/: account_brands.rs  account_consumer_disclosures.rs  account_custom_fields.rs  account_password_rules.rs  account_permission_profiles.rs  account_seal_providers.rs  account_signature_providers.rs  account_signatures.rs  account_tab_settings.rs  account_watermarks.rs  accounts.rs  appliance_info.rs  bcc_email_archive.rs  billing_plans.rs  bulk_send.rs  chunked_uploads.rs  cloud_storage.rs  cloud_storage_providers.rs  comments.rs  connect_configurations.rs  connect_events.rs  connect_secret.rs  contacts.rs  custom_tabs.rs  document_responsive_html_preview.rs  e_note_configurations.rs  envelope_attachments.rs  envelope_consumer_disclosures.rs  envelope_custom_fields.rs  envelope_document_fields.rs  envelope_document_html_definitions.rs  envelope_document_tabs.rs  envelope_document_visibility.rs  envelope_documents.rs  envelope_email_settings.rs  envelope_form_data.rs  envelope_html_definitions.rs  envelope_locks.rs  envelope_recipient_tabs.rs  envelope_recipients.rs  (+51 more)
examples/: Cargo.toml
examples/src/: main.rs
generator/: Cargo.toml
generator/src/: client.rs  functions.rs  main.rs  template.rs  types.rs  utils.rs
giphy/: Cargo.toml  README.md
giphy/src/: gifs.rs  lib.rs  stickers.rs  types.rs
github/: Cargo.toml  README.md
github/examples/: get_repo_in_org.rs  get_token_scopes.rs  list_pulls_for_repo.rs  list_repos_for_org.rs
github/src/: actions.rs  activity.rs  apps.rs  auth.rs  billing.rs  campaigns.rs  checks.rs  classroom.rs  code_scanning.rs  code_security.rs  codes_of_conduct.rs  codespaces.rs  copilot.rs  credentials.rs  dependabot.rs  dependency_graph.rs  dummy-rsa.der  emojis.rs  enterprise_admin.rs  enterprise_team_memberships.rs  enterprise_team_organizations.rs  enterprise_teams.rs  gists.rs  git.rs  gitignore.rs  hosted_compute.rs  http_cache.rs  interactions.rs  issues.rs  lib.rs  licenses.rs  markdown.rs  meta.rs  migrations.rs  oauth_authorizations.rs  oidc.rs  orgs.rs  packages.rs  private_registries.rs  projects.rs  (+15 more)
github/tests/: tests.rs
google/admin/: Cargo.toml  README.md
google/admin/src/: asps.rs  channels.rs  chromeosdevices.rs  customer.rs  customers.rs  domain_aliases.rs  domains.rs  groups.rs  lib.rs  members.rs  mobiledevices.rs  orgunits.rs  privileges.rs  resources.rs  role_assignments.rs  roles.rs  schemas.rs  tokens.rs  two_step_verification.rs  types.rs  users.rs  utils.rs  verification_codes.rs
google/calendar/: Cargo.toml  README.md
google/calendar/src/: acl.rs  calendar_list.rs  calendars.rs  channels.rs  colors.rs  events.rs  freebusy.rs  lib.rs  settings.rs  tests.rs  types.rs  utils.rs
google/cloud-resource-manager/: Cargo.toml  README.md
google/drive/: Cargo.toml  README.md
google/groups-settings/: Cargo.toml  README.md
google/sheets/: Cargo.toml  README.md
gusto/: Cargo.toml  README.md
gusto/src/: admins_beta.rs  benefits.rs  companies.rs  company_bank_accounts_beta.rs  compensations.rs  contractor_payments.rs  contractors.rs  current_user.rs  custom_fields.rs  earning_type.rs  employees.rs  federal_tax_details_beta.rs  garnishments.rs  job_applicants_beta.rs  jobs.rs  lib.rs  locations.rs  pay_schedules.rs  payroll.rs  terminations.rs  tests.rs  time_off_requests.rs  types.rs  utils.rs
mailchimp/: Cargo.toml  README.md
okta/: Cargo.toml  README.md
ramp/: Cargo.toml  README.md
ramp/src/: auths.rs  business.rs  businesses.rs  card.rs  card_program.rs  card_programs.rs  cards.rs  custom_id.rs  custom_ids.rs  department.rs  departments.rs  lib.rs  location.rs  locations.rs  receipt.rs  receipts.rs  reimbursement.rs  reimbursements.rs  tests.rs  transaction.rs  transactions.rs  types.rs  user.rs  users.rs  utils.rs
ramp/tests/: tests.rs
rev.ai/: Cargo.toml  README.md
sendgrid/: Cargo.toml  README.md
sendgrid/src/: alerts.rs  api_key_permissions.rs  api_keys.rs  blocks_api.rs  bounces_api.rs  campaigns_api.rs  cancel_scheduled_sends.rs  categories.rs  certificates.rs  contacts.rs  contacts_api_custom_fields.rs  contacts_api_lists.rs  contacts_api_recipients.rs  contacts_api_segments.rs  csv_ui_only.rs  custom_fields.rs  designs_api.rs  domain_authentication.rs  email_address_validation.rs  email_cname_records.rs  invalid_emails_api.rs  ip_access_management.rs  ip_addresses.rs  ip_pools.rs  ip_warmup.rs  lib.rs  link_branding.rs  lists.rs  mail_send.rs  marketing_campaigns_stats.rs  query.rs  reverse_dns.rs  segmenting_contacts.rs  segmenting_contacts_beta.rs  segmenting_contacts_v2_beta.rs  send_test_email.rs  sender_identities_api.rs  sender_verification.rs  senders.rs  settings_enforced_tls.rs  (+25 more)
sendgrid/tests/: tests.rs
shipbob/: Cargo.toml  README.md
shipbob/src/: channels.rs  inventory.rs  lib.rs  locations.rs  orders.rs  products.rs  receiving.rs  returns.rs  types.rs  utils.rs  webhooks.rs
shopify/: Cargo.toml  README.md
slack/: Cargo.toml  README.md
src/: main.rs
stripe/: Cargo.toml  README.md
tripactions/: Cargo.toml  README.md
tripactions/src/: booking_data.rs  lib.rs  types.rs  utils.rs
zoom/: Cargo.toml  README.md
zoom/src/: accounts.rs  archiving.rs  billing.rs  chat_channels.rs  chat_channels_account_level.rs  chat_messages.rs  chatbot_messages.rs  cloud_recording.rs  common_area_phones.rs  contacts.rs  dashboards.rs  deprecated_api_endpoints.rs  devices.rs  groups.rs  im_chat.rs  im_groups.rs  lib.rs  meetings.rs  pac.rs  phone.rs  phone_auto_receptionists.rs  phone_blocked_list.rs  phone_call_queues.rs  phone_devices.rs  phone_reports.rs  phone_shared_line_groups.rs  phone_site.rs  reports.rs  roles.rs  rooms.rs  rooms_account.rs  rooms_devices.rs  rooms_location.rs  sip_connected_audio.rs  sip_phone.rs  tests.rs  tracking_field.rs  tsp.rs  types.rs  users.rs  (+2 more)
zoom/tests/: tests.rs
(+272 files in other folders)
