[package]
name = "docusign"
description = "A fully generated & opinionated API client for the DocuSign API."
version = "0.3.0"
documentation = "https://docs.rs/docusign/"
repository = "https://github.com/oxidecomputer/third-party-api-clients/tree/main/docusign"
readme = "README.md"
edition = "2018"
license = "MIT"

[features]
default = ["rustls-tls"]
# enable etag-based http_cache functionality
httpcache = ["dirs"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]

[dependencies]
anyhow = "1"
async-recursion = "^0.3.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "^3.0.2", optional = true }
http = "^0.2.4"
hyperx = "1"
jsonwebtoken = "7"
log = { version = "^0.4", features = ["serde"] }
mime = "0.3"
openssl = { version = "0.10", default-features = false, optional = true }
pem = { version = "0.8",  default-features = false, optional = true }
percent-encoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart"] }
reqwest-conditional-middleware = "0.1.0"
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
reqwest-tracing = { version = "0.3.0", features = ["opentelemetry_0_17"] }
ring = { version = "0.16", default-features = false, optional = true }
schemars = { version = "0.8", features = ["bytes", "chrono", "url", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "^0.7"
url = { version = "2", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
async-trait = "^0.1.51"
urlencoding = "^1.3.3"
uuid = { version = "^0.8", features = ["serde", "v4"] }
tokio = { version = "1.8.0", features = ["full"] }

[dev-dependencies]
base64 = "^0.12"
dirs = "^3.0.2"
nom_pem = "4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
