[package]
name = "examples-bin"
version = "0.0.0"
edition = "2018"

[dependencies]
base64 = "^0.12"
dirs = "^3.0.2"
github-api-client = { path = "../github", features = ["httpcache"] }
nom_pem = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.8.0", features = ["full"] }
