[package]
name = "generator"
version = "0.0.0"
edition = "2018"
license = "MPL-2.0"
description = "An OpenAPI client generator, bespoke for the GitHub API."

[dependencies]
anyhow = "1"
getopts = "0.2"
http = "^0.2.4"
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
serde_yaml = "^0.8.17"
titlecase = "1.0"
openapiv3 = "0.5"
