[package]
name = "generator"
version = "0.0.0"
edition = "2018"
license = "MPL-2.0"
description = "An OpenAPI client generator, bespoke for the GitHub API."

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
english-numbers = "0.3.3"
getopts = "0.2"
http = "^0.2.4"
Inflector = "^0.11.4"
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
serde_yaml = "^0.8.17"
#openapiv3 = "0.5"
openapiv3 = { git = "https://github.com/jessfraz/openapiv3", branch = "jess" }
uuid = { version = "0.8", features = ["serde", "v4"] }
