[package]
name = "generator"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
description = "An OpenAPI client generator, bespoke for the GitHub API."

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
english-numbers = "0.3.3"
getopts = "0.2"
http = "^0.2.4"
Inflector = "^0.11.4"
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
serde_yaml = "^0.9.17"
openapiv3 = "1"
uuid = { version = "1.1", features = ["serde", "v4"] }
