[package]
name = "octorust"
description = "A fully generated & opinionated API client for the GitHub API."
version = "0.7.1"
documentation = "https://docs.rs/octorust/"
repository = "https://github.com/oxidecomputer/third-party-api-clients/tree/main/github"
readme = "README.md"
edition = "2021"
license = "MIT"

[features]
default = ["rustls-tls"]
# enable etag-based http_cache functionality
httpcache = ["dirs"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]

[dependencies]
async-recursion = "^1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
dirs = { version = "^3.0.2", optional = true }
http = "^0.2.4"
jsonwebtoken = "8"
log = { version = "^0.4", features = ["serde"] }
mime = "0.3"
openssl = { version = "0.10", default-features = false, optional = true }
parse_link_header = "0.3.3"
pem = { version = "1.1.0",  default-features = false, optional = true }
percent-encoding = "2.2"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "multipart"] }
reqwest-conditional-middleware = "0.2.1"
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
reqwest-tracing = "0.4.4"
ring = { version = "0.16", default-features = false, optional = true }
schemars = { version = "0.8", features = ["bytes", "chrono", "url", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "^0.7"
url = { version = "2", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
async-trait = "^0.1.51"
uuid = { version = "1.1", features = ["serde", "v4"] }
thiserror = "1"
tokio = { version = "1.25.0", default-features = false }

[dev-dependencies]
base64 = "^0.21"
dirs = "^3.0.2"
nom_pem = "4"
rand = "0.8.5"
rsa = "0.8.1"
tokio = { version = "1.25.0", features = ["full", "test-util"] }
wiremock = "0.5.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
