[package]
name = "octorust"
description = "A fully generated & opinionated API client for the GitHub API."
version = "0.1.34"
documentation = "https://docs.rs/octorust/"
repository = "https://github.com/oxidecomputer/third-party-api-clients/tree/main/github"
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
doctest = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
jsonwebtoken = "9"
parse_link_header = "0.3.2"
percent-encoding = "2.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "^0.7"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
base64 = "0.22"
dirs = "3"
nom_pem = "4"
tokio = { version = "1.8.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
