[package]
name = "ramp-api"
description = "A fully generated & opinionated API client for the Ramp API."
version = "0.2.9"
documentation = "https://docs.rs/ramp-api/"
repository = "https://github.com/oxidecomputer/third-party-api-clients/tree/main/ramp"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
async-recursion = "^0.3.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "^3.0.2", optional = true }
http = "^0.2.4"
hyperx = "1"
jsonwebtoken = "7"
log = { version = "^0.4", features = ["serde"] }
mime = "0.3"
percent-encoding = "2.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
reqwest-tracing = { version = "0.2.1", features = ["opentelemetry_0_17"] }
schemars = { version = "0.8", features = ["bytes", "chrono", "url", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "^0.7"
url = { version = "2", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
async-trait = "^0.1.51"
urlencoding = "^1.3.3"
uuid = { version = "^0.8", features = ["serde", "v4"] }

[dev-dependencies]
base64 = "^0.13"
dirs = "^3.0.2"
nom_pem = "4"
tokio = { version = "1.8.0", features = ["full"] }

[features]
# enable etag-based http_cache functionality
httpcache = ["dirs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
