[package]
name = "tripactions"
description = "A fully generated & opinionated API client for the TripActions API."
version = "0.3.1"
documentation = "https://docs.rs/tripactions/"
repository = "https://github.com/oxidecomputer/third-party-api-clients/tree/main/tripactions"
readme = "README.md"
edition = "2018"
license = "MIT"

[features]
default = ["rustls-tls", "reqwest-tracing/opentelemetry_0_17"]
# enable etag-based http_cache functionality
httpcache = ["dirs"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]

[dependencies]
anyhow = "1"
async-recursion = "^1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
dirs = { version = "^3.0.2", optional = true }
http = "^0.2.4"
hyperx = "1"
jsonwebtoken = "8"
log = { version = "^0.4", features = ["serde"] }
mime = "0.3"
openssl = { version = "0.10", default-features = false, optional = true }
pem = { version = "1.1.0",  default-features = false, optional = true }
percent-encoding = "2.1"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "multipart"] }
reqwest-conditional-middleware = "0.1.0"
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
reqwest-tracing = "0.3.0"
ring = { version = "0.16", default-features = false, optional = true }
schemars = { version = "0.8", features = ["bytes", "chrono", "url", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "^0.7"
url = { version = "2", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
async-trait = "^0.1.51"
uuid = { version = "1.1", features = ["serde", "v4"] }
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
base64 = "^0.13"
dirs = "^3.0.2"
nom_pem = "4"
tokio = { version = "1.25.0", features = ["test-util"] }
wiremock = "0.5.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
