[package]
name = "zoom-api"
description = "A fully generated & opinionated API client for the Zoom API."
version = "0.3.1"
documentation = "https://docs.rs/zoom-api/"
repository = "https://github.com/oxidecomputer/third-party-api-clients/tree/main/zoom"
readme = "README.md"
edition = "2018"
license = "MIT"

[features]
default = ["rustls-tls"]
# enable etag-based http_cache functionality
httpcache = ["dirs"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]

[dependencies]
anyhow = "1"
async-recursion = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "^3.0.2", optional = true }
http = "^0.2.4"
hyperx = "1"
jsonwebtoken = "8"
log = { version = "^0.4", features = ["serde"] }
mime = "0.3"
openssl = { version = "0.10", default-features = false, optional = true }
pem = { version = "1.1.0",  default-features = false, optional = true }
percent-encoding = "2.1"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "multipart"] }
reqwest-conditional-middleware = "0.1.0"
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
reqwest-tracing = { version = "0.3.0", features = ["opentelemetry_0_17"] }
ring = { version = "0.16", default-features = false, optional = true }
schemars = { version = "0.8", features = ["bytes", "chrono", "url", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "^0.7"
url = { version = "2", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
async-trait = "^0.1.51"
uuid = { version = "1.1", features = ["serde", "v4"] }
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
base64 = "^0.13"
dirs = "^3.0.2"
nom_pem = "4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
